; ModuleID = '/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_switch_cb.c'
source_filename = "/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_switch_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive = type { i32 }
%struct.mp_archive_volume = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archive*, i8*, i8*)* @switch_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @switch_cb(%struct.archive* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.archive*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.mp_archive_volume*, align 8
  store %struct.archive* %0, %struct.archive** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.mp_archive_volume*
  store %struct.mp_archive_volume* %9, %struct.mp_archive_volume** %7, align 8
  %10 = load %struct.mp_archive_volume*, %struct.mp_archive_volume** %7, align 8
  %11 = call i32 @volume_close(%struct.mp_archive_volume* %10)
  %12 = load %struct.archive*, %struct.archive** %4, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @open_cb(%struct.archive* %12, i8* %13)
  ret i32 %14
}

declare dso_local i32 @volume_close(%struct.mp_archive_volume*) #1

declare dso_local i32 @open_cb(%struct.archive*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
